--- a/app/src/main/res/layout/layout_item_coin.xml
+++ b/app/src/main/res/layout/layout_item_coin.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginHorizontal="10dp"
-    android:layout_marginTop="10dp"
+    android:layout_marginVertical="10dp"
     app:cardElevation="5dp"
     app:cardCornerRadius="8dp"
     android:layout_height="wrap_content">
@@ -71,13 +71,13 @@
         </LinearLayout>
 
         <ImageView
+            android:id="@+id/imgSwitch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:id="@+id/imgSwitch"
+            android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            android:src="@drawable/ic_switch_off"
-            android:layout_alignParentEnd="true" />
+            android:padding="10dp"
+            android:src="@drawable/ic_switch_off" />
     </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
