--- a/app/src/main/res/layout/layout_item_coin.xml
+++ b/app/src/main/res/layout/layout_item_coin.xml
@@ -71,13 +71,13 @@
         </LinearLayout>
 
         <ImageView
-            android:id="@+id/imgSwitch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
             android:padding="10dp"
-            android:src="@drawable/ic_switch_off" />
+            android:id="@+id/imgSwitch"
+            android:layout_centerVertical="true"
+            android:src="@drawable/ic_switch_off"
+            android:layout_alignParentEnd="true" />
     </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
